fixed position issues, 3rd title overlapping and started navbar

--- a/style.css
+++ b/style.css
@@ -7,68 +7,169 @@ html {
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
-}
-
-.content {
-    border: 1px solid #666;
-    width: 80%;
-    margin: 0 auto;
+    /* box-sizing: inherit; */
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 footer {
-    border: 1px solid #666;
-    width: 60%;
-    margin 0 auto;
-    margin: auto;
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 5em;
+    font-size: 12px;
+    font-family: Arial;
+    color: #6e6e6e;
+}
+
+footer span {
+    color: #0088cc;
+}
+
+.content {
+    width: 1460px;
+    margin: 0 auto;
 }
 
 .gradient-bar {
-    border: 1px solid #666;
+    /* display: flex;
+    align-items: stretch;
+    position: absolute;
+    top: 40px;
+    left: 15%;
+    right: 15%; */
+    width: 1000px;
+    border: 1px solid black;
+    border-radius: 5px;
+    overflow: hidden;
+    margin: 0 auto;
+    margin-top: 40px;
+}
+
+.gradient-bar ul {
     display: flex;
-    justify-content: center;
     align-items: center;
-    /* width: 70%;
-    height: 40px; */
+}
+
+.gradient-bar ul li {
+    flex-grow: 1;
+    list-style-type: none;
+}
+
+.gradient-bar li:hover a {
+    background-image: radial-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
+}
+
+.gradient-bar a {
+    display: block;
+    background-color: rgb(71, 71, 71);
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    align-self: stretch;
+}
+
+.button {
+    display: block;
+    width: 100%;
+    height: 30px;
+    background-image: url(images/navbar.svg);
+    background-position-x: center;
+}
+
+.store {
+    background-position-y: -30px;
+}
+
+.mac {
+    background-position-y: -60px;
+}
+
+.ipod {
+    background-position-y: -90px;
+}
+
+.iphone {
+    background-position-y: -120px;
+}
+
+.ipad {
+    background-position-y: -150px;
+}
+
+.itunes {
+    background-position-y: -180px;
+}
+
+.support {
+    background-position-y: -210px;
+}
+
+.search {
+    width: 132px;
 }
 
 .headings {
-    border: 1px solid #666;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url(images/hero.jpg) bottom;
-    width: 100%;
-    height: 645px;
+    background: url(images/hero.jpg) bottom no-repeat;
+    height: 660px;
 }
 
-.title h1,
-a {
-    text-align: center;
-    text-decoration: none;
+.first {
+    height: 95px;
+    object-fit: cover;
 }
 
-.products li {
+.third {
+    height: 32px;
+    margin-top: 30px;
+    overflow: hidden;
+}
+
+.third img {
+    object-fit: cover;
+    object-position: 0 0;
+}
+
+.third img:hover {
+    object-position: 0 -32px;
+}
+
+.products {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top: 2px;
+}
+
+.products img {
+    border-left: 1px;
+    border-right: 1px;
+}
+
+.bottom-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.right-list li {
     display: inline-block;
-    width: 24%;
+    list-style: none;
+    border-right: 1px solid #6e6e6e;
+    margin-left: 3px;
+    padding-right: 3px;
+    color: #0088cc;
 }
 
-.product img {
-    border: 0;
+.right-list li:last-child {
+    border-right: none;
 }
 
-.nav-footer li {
-    display: inline-block;
-    text-decoration: none;
-    border: 1px solid black;
-}
-
-.copyright p {
-    display: inline-block;
-}
-
-.copyright p:nth-child(2) {
-    border-right: 1px solid #666;
-    padding-right: 1em;
-    margin-right: 1em;
+.copyright {
+    display: flex;
+    align-self: center;
+    padding-top: 20px;
 }
